Fixed #contentContainer jumping  when navbar unmounts instead of just opacity: 0;

--- a/frontend/src/components/routes/Routes.module.scss
+++ b/frontend/src/components/routes/Routes.module.scss
@@ -2,6 +2,7 @@
 #contentContainer {
   // padding-top: 75px;
   min-height: 100vh;
+  padding-top: 65px;
 }
 
 nav[mode="fixed"] ~ #contentContainer {
